# CPAP_PI_firmware

./: .gitignore  .gitmodules  20260615---cpap-pi---won-pcb-design-review.html  20260622---cpap-pi---bom-generation-and-vdd-circuit-fix.html  20260701---cpap-pi---board-assembly,-flux-and-batt-gnd-short.html  20260701---cpap-pi---power-design-flaw--and--firmware-fix.html  20260702---cpap-pi---sensor-stack-bringup-and-binary-data-pipeline.html  20260702---cpap-pi---won-setup-and-two-track-branching.html  404.html  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  app.overlay  index.html  index.xml  prj.conf  publish.sh  quartz.config.yaml  sitemap.xml
Boards/kamoamoa/cpap_pi_body/: Kconfig  Kconfig.cpap_pi_body  board.yml  cpap_pi_body_nrf52840.dts  cpap_pi_body_nrf52840.yaml  cpap_pi_body_nrf52840_defconfig
Boards/kamoamoa/cpap_pi_control/: Kconfig  Kconfig.cpap_pi_control  board.c  board.cmake  board.yml  cpap_pi_control_nrf52840-pinctrl.dtsi  cpap_pi_control_nrf52840.dts  cpap_pi_control_nrf52840.yaml  cpap_pi_control_nrf52840_defconfig
documentation/: circuit_schematic.md
documentation/datasheets/: ESS102_Datasheet.txt  MAX30101_Datasheet.txt  SHT40_Datasheet.txt  TCA9548A_Datasheet.txt  nRF52840_Datasheet.txt
scripts/: ble_control.py  rtt_bridge.py
src/: main.c  myfunc.c  myfunc.h
src/arduino_compat/: Arduino.h  WProgram.h  Wire.cpp  Wire.h
src/comm/: ble_manager.c  ble_manager.h  comm_manager.c  comm_manager.h  comm_protocol.h  rtt_stream.c  rtt_stream.h
src/drivers/: bus_diag.c  bus_diag.h  driver_fsr.c  driver_fsr.h  driver_led.c  driver_led.h  driver_ms5611.c  driver_ms5611.h  driver_tca9548a.c  driver_tca9548a.h
src/interface/: ble_interface.c  ble_interface.h
src/sensors/: max30101_reader.c  max30101_reader.h  mux_init.c  mux_init.h  ppg_reader.c  ppg_reader.h  sensor_manager.c  sensor_manager.h  sht40_reader.c  sht40_reader.h
src/sensors/ess102/: ess102_reader.c  (+1 more)
static/: contentIndex.json
tags/: 2.html  cpap-pi.html  firmware.html  hardware.html  index.html  kamoamoa.html  meeting.html  pcb-design.html
(+9 files in other folders)
